--- a/LoginApp/Storyboards/Base.lproj/Main.storyboard
+++ b/LoginApp/Storyboards/Base.lproj/Main.storyboard
@@ -2,9 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -46,7 +46,7 @@
                                         <state key="normal" title="Log In"/>
                                         <connections>
                                             <action selector="logInPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="5d8-uL-tit"/>
-                                            <segue destination="aXI-zN-tSn" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" id="MD4-4j-zMD"/>
+                                            <segue destination="Ilc-m3-IPB" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" id="MD4-4j-zMD"/>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="3rP-ne-YK4">
@@ -74,7 +74,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" red="0.57878872609999998" green="0.76942896839999997" blue="0.7278589822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="1hB-eN-lZq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="LFP-5I-tXP"/>
                             <constraint firstItem="1hB-eN-lZq" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-32" id="bwN-no-Xmb"/>
@@ -90,7 +90,7 @@
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="dRs-C1-NiO">
             <objects>
                 <viewController id="aXI-zN-tSn" customClass="WelcomeViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -99,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXx-Yf-3yO">
-                                <rect key="frame" x="87.5" y="173" width="200" height="29"/>
+                                <rect key="frame" x="87.5" y="158.5" width="200" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="KyP-bv-LSo"/>
                                 </constraints>
@@ -108,13 +108,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLb-Fn-IVD">
-                                <rect key="frame" x="156" y="242" width="63" height="70"/>
+                                <rect key="frame" x="156" y="227.5" width="63" height="70"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="58"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dui-62-qyN">
-                                <rect key="frame" x="152.5" y="518" width="70" height="38"/>
+                                <rect key="frame" x="152.5" y="477" width="70" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Log out">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -125,7 +125,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yHU-w9-Rtf"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.57878872609999998" green="0.76942896839999997" blue="0.7278589822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="yHU-w9-Rtf" firstAttribute="bottom" secondItem="SXx-Yf-3yO" secondAttribute="bottom" multiplier="3.3" id="0QZ-nw-4vr"/>
                             <constraint firstItem="SXx-Yf-3yO" firstAttribute="centerX" secondItem="v3H-6K-bK2" secondAttribute="centerX" id="5Zi-f4-kgj"/>
@@ -135,7 +135,7 @@
                             <constraint firstItem="yHU-w9-Rtf" firstAttribute="bottom" secondItem="dui-62-qyN" secondAttribute="bottom" multiplier="1.2" id="sbD-jj-bgT"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="jib-Tn-Clc"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="jib-Tn-Clc"/>
                     <connections>
                         <outlet property="welcomeLabel" destination="SXx-Yf-3yO" id="KEJ-AO-mGx"/>
                     </connections>
@@ -143,12 +143,130 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3kp-6y-8Ie" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="o8o-V1-4yz" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="783" y="27"/>
+            <point key="canvasLocation" x="481" y="798"/>
+        </scene>
+        <!--More About Me-->
+        <scene sceneID="jky-t5-X3Z">
+            <objects>
+                <viewController id="VCK-b3-h4P" customClass="UserInfoViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mfM-bh-fzM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkl-mI-OI0">
+                                <rect key="frame" x="125" y="311.5" width="125" height="44"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="More Info">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="A2k-4g-SCM" kind="show" id="AVg-xt-F1S"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ls5-X7-27E"/>
+                        <color key="backgroundColor" red="0.57878872609999998" green="0.76942896839999997" blue="0.7278589822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="hkl-mI-OI0" firstAttribute="centerY" secondItem="mfM-bh-fzM" secondAttribute="centerY" id="N3X-vl-LTs"/>
+                            <constraint firstItem="hkl-mI-OI0" firstAttribute="centerX" secondItem="mfM-bh-fzM" secondAttribute="centerX" id="aKs-ac-ak9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="More About Me" id="OCa-4t-F1Y"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="anl-re-93j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2588" y="803.74812593703155"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="qcZ-Ms-oGN">
+            <objects>
+                <viewController id="A2k-4g-SCM" customClass="ImageViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ImH-UV-O46">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3d2-nt-5iV">
+                                <rect key="frame" x="62" y="96" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="b5W-9g-RFI"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="About Me" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2Pu-Xt-krp">
+                                <rect key="frame" x="72" y="381" width="240" height="128"/>
+                                <color key="backgroundColor" red="0.57878872609999998" green="0.76942896839999997" blue="0.7278589822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9gz-I2-3Dl"/>
+                        <color key="backgroundColor" red="0.57878872609999998" green="0.76942896839999997" blue="0.7278589822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="3d2-nt-5iV" firstAttribute="trailing" secondItem="2Pu-Xt-krp" secondAttribute="trailing" id="0Nj-fu-OJl"/>
+                            <constraint firstItem="9gz-I2-3Dl" firstAttribute="bottom" secondItem="2Pu-Xt-krp" secondAttribute="bottom" constant="109" id="0vt-7i-8EH"/>
+                            <constraint firstItem="2Pu-Xt-krp" firstAttribute="top" secondItem="3d2-nt-5iV" secondAttribute="bottom" constant="35" id="8Qa-QL-UGX"/>
+                            <constraint firstItem="2Pu-Xt-krp" firstAttribute="leading" secondItem="9gz-I2-3Dl" secondAttribute="leading" constant="72" id="A4V-MY-5GH"/>
+                            <constraint firstItem="3d2-nt-5iV" firstAttribute="leading" secondItem="9gz-I2-3Dl" secondAttribute="leading" constant="62" id="My0-x8-ci9"/>
+                            <constraint firstItem="9gz-I2-3Dl" firstAttribute="trailing" secondItem="2Pu-Xt-krp" secondAttribute="trailing" constant="63" id="NwU-oB-xw9"/>
+                            <constraint firstItem="3d2-nt-5iV" firstAttribute="top" secondItem="9gz-I2-3Dl" secondAttribute="top" id="bET-wX-RFq"/>
+                            <constraint firstItem="2Pu-Xt-krp" firstAttribute="top" secondItem="3d2-nt-5iV" secondAttribute="bottom" constant="35" id="y1o-7u-Msh"/>
+                            <constraint firstItem="9gz-I2-3Dl" firstAttribute="trailing" secondItem="3d2-nt-5iV" secondAttribute="trailing" constant="63" id="yYf-56-FaB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="AvC-LK-MvY"/>
+                    <connections>
+                        <outlet property="imageView" destination="3d2-nt-5iV" id="hal-Wu-qbw"/>
+                        <outlet property="textView" destination="2Pu-Xt-krp" id="8ix-04-zEY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OK8-tF-Rug" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3504.8000000000002" y="803.74812593703155"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="b6Q-9R-2ZF">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ilc-m3-IPB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qxa-yZ-K2b">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="aXI-zN-tSn" kind="relationship" relationship="viewControllers" id="vle-tC-tux"/>
+                        <segue destination="nAp-YV-4s5" kind="relationship" relationship="viewControllers" id="geL-Hj-fYh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ncB-6Q-6K2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1082.4000000000001" y="27.436281859070466"/>
+        </scene>
+        <!--More-->
+        <scene sceneID="V0d-Af-dz6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nAp-YV-4s5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="More" image="hand.thumbsup" catalog="system" id="bsX-s8-Yl4"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="3hg-aM-qwg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VCK-b3-h4P" kind="relationship" relationship="rootViewController" id="B4h-nY-hSu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lmK-0z-9zh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1648.8" y="803.74812593703155"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="groupTableViewBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
+        <image name="homekit" catalog="system" width="128" height="106"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
